public/stylesheets/style.css
body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  margin: 0;
  background: url("/images/wasteland.jpg");
  background-size: 100vw;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  min-height: 100vh;
  width: 100vw;
}

a {
  color: #00B7FF;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}
header, footer {
  height: 50px;
  background: white;
  width: 100vw;
  text-align: center;
}
.main_image {
  width: 100vw;
  margin: 0;
}
.title {
  font-size: 80px;
  text-align: center;
  font-family: 'Gloria Hallelujah', cursive;
}

